# Klang

./: .clang-format  .editorconfig  .gitignore  Build.MK  CMakeLists.txt  Lexer.k  Make.csx  Make.py  Makefile  README  README.md  Syntax  Tasks  compile_flags.txt  d  makefile  mian.cpp  syntax  tasks  xmake.lua
.Source/Analyzer/: lexer.cpp  lexer.h  state.defs  token.cpp  token.defs  token.h
.Source/Utilities/: Buffer.H
Documents/: Combinate  Literals  Pattern_matching  Primitives  Syntax  Tokens  Tree  Types
Examples/: Bits.kpl  Conditions.kpl  Labels.kpl  Lexer.code  Loops.kpl  Matching  Statements  Structures.kpl  Switch.kpl
Source/: Bucket.h  CMakeLists.txt  Compiler.H  Compiler.cpp  Core.hpp  Definitions.H  Definitions.cpp  Definitions.hpp  Doctor.CC  Doctor.H  Doctor.cpp  Doctor.h  Doctor.hpp  Entry.cpp  Error.H  Errors.h  Exception.cpp  IO.cpp  Include.H  Klang.h  Lexer.CPP  Lexer.H  Lexer.cpp  Lexer.h  Location.H  Logger.cpp  Macros.h  Main.cpp  Module.hpp  Parser.cpp  Parser.h  S  Space.H  Symbol.cpp  Symbol_Table.cpp  Symbol_Table.h  Symbol_Tree.cpp  Symbol_Tree.h  Syntax.h  Syntax_Definitions.h  (+10 more)
Source/Analyer/: Lexer.cpp  Lexer.hpp  Token.cpp  Token.hpp
Source/Analyzer/: Expression.h  Expressions.h  Lexer.CC  Lexer.H  Lexer.acpp  Lexer.ah  Lexer.cpp  Lexer.h  Lexer.hpp  Parser.acpp  Parser.ah  Parser.cpp  Parser.h  Parser.hpp  Structs.ah  Symbol.cpp  Syntax.cpp  Syntax.h  Syntax.hpp  Token.C  Token.CC  Token.H  Token.cpp  Token.h  Token.hpp  Tokens.cpp  Tokens.h
Source/Analyzer/Defs/: Token.defs
Source/Collections/: Dynar.cpp  Dynar.hpp
Source/Compiler/: Checker.hpp  Compiler.hpp  Error.cpp  Error.hpp  Expression.cpp  Expression.hpp  Generator.hpp  Lexer.cpp  Lexer.h  Lexer.hpp  Parser.cpp  Parser.h  Parser.hpp  Symbol_Table.h  Symbol_Tree.h  Symbol_Tree.hpp  Syntax.hpp  Token.cpp  Token.hpp
Source/Compiler/Analyzer/: Lexer.cpp  Lexer.hpp  Token.cpp  Token.hpp
Source/Syntax/: Artifact.h  Binary.H  Binary.h  Binary.hpp  Body.H  Cast.H  Cast.cpp  Datum.H  Identifier.H  Identifier.cpp  Include.h  Initializer.H  Lexeme.cpp  Lexeme.h  Lexeme.hpp  Literal.h  Literal.hpp  Object.h  Parameter.H  Primitive.H  Procedure.H  Scoped.h  Scoped.hpp  Sequential.H  Syntax.H  Syntax.cpp  Syntax.h  Syntax.hpp  TASKS  Type.H  Unary.H  Unary.h  Unary.hpp
Source/System/: Memory.cpp  Memory.hpp
Source/Text/: Char.hpp  String.cpp  String.hpp
Source/Utilities/: Buffer.H  Buffer.hpp  Dynar.CC  Dynar.H  Dynar.cpp  Error.hpp  Flag.H  Flag.cpp  Memory.CC  Memory.H  Memory.cpp  Memory.hpp  Result.H  Stack.cpp  Stack.hpp  Table.CC  Table.H  Table.cpp  Table.hpp  TempVector.h  Text.CC  Text.H  Text.cpp
Source/Utility/: Char.hpp  Dynar.cpp  Dynar.hpp  Error.cpp  Error.hpp  Text.cpp  Text.hpp
Source/Utility/Collections/: Dynar.cpp  Dynar.hpp
Source/Utility/Exceptions/: Exception.cpp  Exception.hpp  InvalidArgument.hpp  OutOfRange.hpp
Source/Utility/System/: Memory.cpp  Memory.hpp
Source/Utility/Text/: Char.hpp  String.cpp  String.hpp
Source/Utils/: Bit.hpp  Char.hpp  Dynarray.hpp  Error.cpp  Error.hpp  Map.cpp  Map.hpp  String.cpp  String.hpp  Structs.hpp  Table.hpp  Vector.hpp
Tests/: A.kpl  Basic.K  Basic.kpl  Function.klang  Lexer.code  Main.cpp  Pointers  Short  Syntax  Syntax2  Test0  Types.code  Types.kpl  arithmetics.k  basic.k  df
include/: expected
klang/: diagnostics.h  lexer.cpp  lexer.h  main.cpp  precompile.h  syntax.cpp  syntax.h
source/: definitions.h  definitions.hpp  diseases.defs  doctor.h  doctor.hpp  include.h  macros.hpp  main.cpp
(+24 files in other folders)
